--- a/1-1.html
+++ b/1-1.html
@@ -31,7 +31,9 @@
 ¡¡Kodatuno¤Ï½ã¹ñ»º¤Î¥Þ¥ë¥Á¥×¥é¥Ã¥È¥Õ¥©¡¼¥à¤Ê¥ª¡¼¥×¥ó¥½¡¼¥¹CAM¥«¡¼¥Í¥ë¤òÌÜ»Ø¤·³«È¯Ãæ¤Î
 ¥½¥Õ¥È¥¦¥§¥¢¤Ç¤¹¡£¥Þ¥ë¥Á¥×¥é¥Ã¥È¥Õ¥©¡¼¥à´Ä¶­¤ò³ÎÊÝ¤¹¤ë¤¿¤á¡¢³«È¯¸À¸ì¤ÏC/C++¤òÍÑ¤¤¤Æ¤ª
 ¤ê¡¢3DÉÁ²èÍÑAPI¤ËOpenGL GLUT¤òÍÑ¤¤¤Æ¤¤¤Þ¤¹¡£¤Þ¤¿¹¹¤Ë¡¢R1.1¤«¤é¤Ï¹âµ¡Ç½GUI¥¢¥×¥ê¥±¡¼¥·¥ç¥ó³«È¯´Ä¶­¤Ç¤¢¤ë
-Wide Studio¤òGUI¤È¤·¤ÆÍÑ¤¤¤Æ¤¤¤Þ¤¹¡£ËÜ¥½¥Õ¥È¥¦¥§¥¢¤Ï¡¢CAD¥Ç¡¼¥¿¤ÎÃæ´Ö¥Õ¥©¡¼¥Þ
+Wide Studio¤òGUI¤È¤·¤ÆÍÑ¤¤¤Æ¤¤¤Þ¤¹¡£R2.0¤Ç¤Ï¡¢WideStudio¤òGUI¤ËÍÑ¤¤¤¿Version¡ÊW/S Ver¡ËµÚ¤Ó¡¢
+OpenGL¤Î¤ß¤òÍÑ¤¤¤¿Version¡ÊN/G Ver¡Ë¤ÎÎ¾Êý¤òÆ±Êñ¤·¤Æ¤¤¤Þ¤¹¡£<BR>
+¡¡ËÜ¥½¥Õ¥È¥¦¥§¥¢¤Ï¡¢CAD¥Ç¡¼¥¿¤ÎÃæ´Ö¥Õ¥©¡¼¥Þ
 ¥Ã¥È¤Ç¤¢¤ëIGES(JAMA-IS V1.04)¤ò¥µ¥Ý¡¼¥È¤·¤Æ¤¤¤Þ¤¹¡£¤³¤ÎIGES¥Ç¡¼¥¿
 ¤ò¹½À®¤¹¤ëÁ´¤Æ¤Î¶ÊÀþ¡¦¶ÊÌÌ¥¨¥ó¥Æ¥£¥Æ¥£¤Ï¡¢ÆâÉôÉ½¸½¤È¤·¤ÆNURBS¤ËÊÑ´¹¤µ¤ì¡¢ÊÝ»ý¤µ¤ì¤ë¹½
 Â¤¤È¤Ê¤Ã¤Æ¤¤¤Þ¤¹¡£
@@ -41,8 +43,8 @@ CAM³«È¯¼Ô¤¬¤³¤ì¤é´Ø¿ô¤òÁÈ¤ß¹ç¤ï¤»¤ë¤³¤È¤Ë¤è¤Ã¤Æ¡¢¤½¤ì¤¾¤ì¤ÎÌÜÅª¤ËÂ¨¤·¤¿¥¢¥×¥ê¥±¡
   ËÜ¥½¥Õ¥È¥¦¥§¥¢¤Ï¤Þ¤À¤Þ¤ÀÈ¯Å¸ÅÓ¾å¤Ç¤¹¡£¤µ¤é¤Ê¤ëÈ¯Å¸¤Î¤¿¤á¤Î¤´¶¨ÎÏ¡¢¤´½õ¸À¤¬Äº¤±¤ë¤³¤È¤ò´üÂÔ¤·¤Æ¤ª¤ê¤Þ¤¹¡£
 
 <BR><BR><HR><H3>Àµ¼°Ì¾¾Î</H3>
-Kodatuno R1.1<BR>
-Kanazawa univ.'s Open Developed Alternative Trajectory Utility Nucleus Object<BR>
+Kodatuno R2.0<BR>
+(Kodatuno is Open Developed Alternative Trajectory Utility Nucleus Object)<BR>
 
 <BR><BR><H3>¥é¥¤¥»¥ó¥¹</H3>
 Kodatuno¤Ï¥ª¡¼¥×¥ó¥½¡¼¥¹¥½¥Õ¥È¥¦¥§¥¢¤Ç¤¹¡£
@@ -59,16 +61,21 @@ GNU¤Î°ìÈÌ»ÈÍÑµö²Ä·ÀÌó(GPL)¤Ë´ð¤Å¤¤¤ÆÍøÍÑ´ê¤¤¤Þ¤¹¡£<BR>
 http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 
 <BR><BR><H3>Æ°ºî³ÎÇ§´Ä¶­</H3>
-   ¡¦WindowsXP/Vista/7<BR>
-   ¡¦FreeBSD: 6.2-RELEASE, compiler: gcc3.4.6<BR>
-   ¡¦Debian: GNU/Linux ver5.0, Kernel: 2.6.26-2-686, compiler: gcc4.3.2<BR>
-   ¡¦Ubuntu: 8.10, compiler: gcc4.2.4<BR>
+<UL>
+<LI>WindowsXP/Vista/7<BR>
+<LI>FreeBSD: 6.2-RELEASE, compiler: gcc3.4.6<BR>
+<LI>Debian: GNU/Linux ver5.0, Kernel: 2.6.26-2-686, compiler: gcc4.3.2<BR>
+<LI>Ubuntu: 8.10, compiler: gcc4.2.4
+</LI></UL>
 
-<BR><BR><H3>¹¹¿·ÍúÎò</H3>
-¡¦2010/03 Kodatuno R1.0<BR>
-¡¦2011/03 Kodatuno R1.1   Wide Studio¤Î¼ÂÁõ¡¢¥Ð¥°½¤Àµ¡¢µ¡Ç½¶¯²½<BR>
+<BR><H3>¹¹¿·ÍúÎò</H3>
+<UL>
+<LI>2010/03 Kodatuno R1.0<BR>
+<LI>2011/03 Kodatuno R1.1¡¡¡¡¡¡Wide Studio¤Î¼ÂÁõ¡¢¥Ð¥°½¤Àµ¡¢µ¡Ç½¶¯²½<BR>
+<LI>2011/11 Kodatuno R2.0¡¡¡¡¡¡¥Ð¥°½¤Àµ¡¢µ¡Ç½¶¯²½<BR>
+</LI></UL>
 
-<BR><BR><H3>¥¯¥ì¥¸¥Ã¥È</H3>
+<BR><H3>¥¯¥ì¥¸¥Ã¥È</H3>
   Áí»Ø´ø¡§ÀõÀîÄ¾µª¡Ê¶âÂôÂç³Ø¡Ë<BR>
   ³«È¯¥³¥¢¥Á¡¼¥à¡§¹â¿ù·É¸ã¡Ê¶âÂôÂç³Ø¡Ë¡¤·§ºäÂóÌé¡Ê¶âÂôÂç³Ø¡Ë<BR>
 
@@ -82,7 +89,7 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 ¤ÎÀÕÇ¤¤Ë¤ª¤¤¤Æ¤´»ÈÍÑ¤¯¤À¤µ¤¤¡£
 
 
-</blockquote> <HR> Document Release 1.0 for Kodatuno R1.1, Mar. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
 <A HREF="./index.html">index</A>
 <A HREF="./1-2.html">Next</A><br>
 </center> <hr> <table cellpadding="0" cellspacing="0" border="0" width="100%">    
@@ -91,7 +98,7 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Mar. 3, 2011</i></small>      
+		<small><i>Last modified: Nov. 11, 2011</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
