--- a/2-3.html
+++ b/2-3.html
@@ -29,20 +29,33 @@
 
 <BR><HR><H2>│╞ежегеєе╔ежд╬╠╛╛╬д╚╡б╟╜</H2>
 
-Kodatunoд╬еседеє▓ш╠╠╡┌д╙│╞еведе│еєд╬└т╠└дЄ▓╝┐▐д╦╝ид╖д▐д╣бг
+Kodatunoд╬еседеє▓ш╠╠╡┌д╙│╞еведе│еєд╬└т╠└дЄ▓╝┐▐д╦╝ид╖д▐д╣бг<BR>
+W/S Verд╟д╧бве░еще╒еге├еп╔┴▓ш╬╬░шд╦▓├дибв╝яб╣д╬┴р║юеведе│еєдфе│еєе╜б╝еыдм═╤░╒д╡дьд╞ддд▐д╣бг<BR>
+N/G Verд╟д╧бве╖еєе╫еыд╩е░еще╒еге├еп╔┴▓ш╬╬░шд╚бв┤╩░╫есе╦ехб╝┴к┬Є▓ш╠╠дм═╤░╒д╡дьд╞дддыд╬д▀д╟д╣бг<BR>
 
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/OverView.jpg"></CENTER></P>
 <BR>
-б╬еседеє▓ш╠╠д╬└т╠└б╧
+б╬Wide Studio Versionд╬│░┤╤б╧
+</CENTER></P>
+<BR><BR>
+
+<P><CENTER>
+<P><CENTER><IMG SRC="pixmaps/GUI for NG Ver.jpg"></CENTER></P>
+б╬No GUI Versionд╬│░┤╤б╧
 </CENTER></P>
 
 <BR><BR>
 <UL>
+<LI>Wide Studio Version<BR><BR>
+
+<UL>
 <LI>е░еще╒еге├еп╔┴▓ш╬╬░ш<BR><BR>
 ╞╔д▀╣■д▐дьд┐IGESд▐д┐д╧STLе╟б╝е┐дм╔┴▓шд╡дьд▐д╣бгKodatunoд╟д╧бвд│дьдщ╬й┬╬е╟б╝е┐д╬д│д╚дЄ
 Bodyд╚╕╞д╙д▐д╣бг<BR>
-д│д╬е░еще╒еге├еп╔┴▓ш╬╬░ш╞тд╟е▐еже╣/енб╝е▄б╝е╔┴р║юдЄ╣╘джд│д╚д╦дшдъбв░╩▓╝д╦╝ид╣┴р║юдм▓─╟╜д╟д╣бг<BR><BR>
+д│д╬е░еще╒еге├еп╔┴▓ш╬╬░ш╞тд╟е▐еже╣/енб╝е▄б╝е╔┴р║юдЄ╣╘джд│д╚д╦дшдъбв░╩▓╝д╦╝ид╣┴р║юдм▓─╟╜д╟д╣бг
+N/G Verд╚W/S Verд╟┴р║юдм░█д╩дъд▐д╣д╬д╟├э░╒д╖д╞дпд└д╡ддбг<BR><BR>
+
 ббa) │╚┬ч ----- Ctrl+┐┐дє├це╔еще├е░д╟▒ж╩¤╕■д╪е▐еже╣дЄ░▄╞░<BR>
 ббb) ╜╠╛о ----- Ctrl+┐┐дє├це╔еще├е░д╟║╕╩¤╕■д╪е▐еже╣дЄ░▄╞░<BR>
 ббc) ╩┐╣╘░▄╞░ --- ┐┐дє├це╔еще├е░<BR>
@@ -51,11 +64,13 @@ Bodyд╚╕╞д╙д▐д╣бг<BR>
 ббf) е╣егб╝е╫е╗еьепе╖ечеє --- ║╕е╔еще├е░<BR>
 ббg) 15┼┘▓є┼╛ ---- Ctrl+╛х▓╝║╕▒ж╠Ё░їенб╝<BR>
 
+
 <BR><BR><LI>е░еще╒еге├еп┴р║юеведе│еє<BR><BR>
 ╛х┐▐д╦╝ид╣дшджд╩бв╝яб╣д╬е░еще╒еге├еп┴р║юдм▓─╟╜д╟д╣бг<BR>
 
 <BR><BR><LI>Bodyд╬╞╔д▀╣■д▀╡┌д╙║я╜№<BR><BR>
-"Open"е▄е┐еєдЄ▓б▓╝д╣дыд│д╚д╦дшдъбвIGESбвSTLе╒ебедеы┴к┬Єе└едевеэе░дм│лднд▐д╣бг
+ббN/G Verд╟д╧бв╝┬╣╘е╒ебедеыдЄ╝┬╣╘╕хбве│еєе╜б╝еы▓ш╠╠д╟╞╔д▀╣■д▀д┐ддIGES/STLе╒ебедеы╠╛дЄ╞■╬╧д╖д▐д╣бг<BR>
+ббW/S Verд╟д╧бв"Open"е▄е┐еєдЄ▓б▓╝д╣дыд│д╚д╦дшдъбвIGESбвSTLе╒ебедеы┴к┬Єе└едевеэе░дм│лднд▐д╣бг
 IGESдвдыддд╧STLе╒ебедеыдЄ┴к┬Єд╣дыд╚бве░еще╒еге├еп╔┴▓ш╬╬░шд╦┴к┬Єд╡дьд┐Bodyдм╔┴▓шд╡дьд▐д╣бг
 д▐д┐бв┴к┬Єд╖д┐Body╠╛дмBody╠╛╔╜╝и▓ш╠╠д╦╔╜╝ид╡дьд▐д╣бг╞╔д▀╣■дсдыBodyд╬┐Їд╧║╟┬ч8д─д╟д╣бг
 ╔┴▓шд╡дьд╞дддыBodyдЄ┴к┬Єд╖бв"Delete"е▄е┐еєдЄ▓бд╣д╚бв┴к┬Єд╡дьд┐Bodyдм║я╜№д╡дьд▐д╣бг<BR>
@@ -83,11 +98,35 @@ User Functionд╦░·┐Їд╚д╖д╞═┐дидыд│д╚дмд╟днд▐д╣бгд─д▐дъбвецб╝е╢б╝╞╚╝лд╬еве╫еъе▒б╝е
 <BR><BR><LI>е│еєе╜б╝еы<BR><BR>
 │╞╝яесе├е╗б╝е╕д╬╔╜╝идфбве│е▐еєе╔д╬╞■╬╧дм▓─╟╜д╟д╣бге│е▐еєе╔д╬╝я╬рд╦┤╪д╖д╞д╧╝бд╬
 <A HREF="2-4.html">2.4 │╞е│е▐еєе╔д╬╠╛╛╬д╚╡б╟╜</A>дЄ╗▓╛╚д╖д╞дпд└д╡ддбг<BR><BR>
+</UL>
+</UL><BR><BR>
 
+<UL>
+<LI>No GUI Version<BR><BR>
+<UL>
+<LI>е░еще╒еге├еп╔┴▓ш╬╬░ш<BR><BR>
+
+ббa) │╚┬ч ----- Ctrl+┐┐дє├це╔еще├е░д╟▒ж╩¤╕■д╪е▐еже╣дЄ░▄╞░<BR>
+ббb) ╜╠╛о ----- Ctrl+┐┐дє├це╔еще├е░д╟║╕╩¤╕■д╪е▐еже╣дЄ░▄╞░<BR>
+ббc) ╩┐╣╘░▄╞░ --- Shift+┐┐дє├це╔еще├е░<BR>
+ббd) ▓є┼╛ ----- ┐┐дє├це╔еще├е░<BR>
+ббe) е╘е├енеєе░ --- ║╕епеъе├еп<BR>
+ббf) е╣егб╝е╫е╗еьепе╖ечеє --- ║╕е╔еще├е░<BR>
+ббg) есе╦ехб╝╔╜╝и --- ▒жепеъе├еп<BR>
+
+<BR><BR><LI>есе╦ехб╝<BR><BR>
+▒жепеъе├епд╦дшдъесе╦ехб╝дЄ╔╜╝ид╡д╗дыд│д╚дмд╟днд▐д╣бг<BR><BR>
+ббa) Execute User Function ----- ецб╝е╢б╝дм╞╚╝лд╦║ю└од╖д┐е╫еэе░ещердЄ┼╨╧┐д╖бв╝┬╣╘д╣дыд│д╚дмд╟днд▐д╣<BR>
+ббb) Selection Cancel ----- е╗еьепе╖ечеєдЄенеуеєе╗еыд╖д▐д╣<BR>
+ббc) Draw BODY ON/OFF ----- ете╟еыд╬╔╜╝и/╚є╔╜╝идЄ└┌дъ┬╪дид▐д╣<BR>
+ббd) Draw Sraface ON/OFF ----- еяедефб╝е╒еьб╝ер╔╜╝и/е╜еъе├е╔╔╜╝идЄ└┌дъ┬╪дид▐д╣<BR>
+ббe) View Angle ----- е╙ехб╝евеєе░еыдЄX,Y,Z│╞╝┤╛хдлдщд╬╗╧┼└д╦└┌дъ┬╪дид▐д╣<BR>
+ббf) Version info ----- е╨б╝е╕ечеє╛Ё╩єдЄе│еєе╜б╝еыд╦╜╨╬╧<BR>
 </UL>
 
 
-</blockquote> <HR> Document Release 1.0 for Kodatuno R1.1, Mar. 2011<P> <hr> <center>
+
+</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
 <A HREF="./2-2.html">Prev</A>
 <A HREF="./index.html">index</A>
 <A HREF="./2-4.html">Next</A><br>
@@ -97,7 +136,7 @@ User Functionд╦░·┐Їд╚д╖д╞═┐дидыд│д╚дмд╟днд▐д╣бгд─д▐дъбвецб╝е╢б╝╞╚╝лд╬еве╫еъе▒б╝е
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Mar. 3, 2011</i></small>      
+		<small><i>Last modified: Nov. 11, 2011</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
