--- a/2-4.html
+++ b/2-4.html
@@ -27,9 +27,9 @@
 </table> 
 <blockquote> 
 
-<BR><HR><H2>│╞е│е▐еєе╔д╬╠╛╛╬д╚╡б╟╜</H2>
-
-Kodatunoе│еєе╜б╝еыд╦┼╨╧┐д╡дьд┐е│е▐еєе╔дЄ╞■╬╧д╣дыд│д╚д╦дшдъбв╜ъ─ъд╬┴р║юдЄ╝┬╣╘д╣дыд│д╚дмд╟днд▐д╣бг
+<BR><HR><H2>W/S Versionдм╗¤д─╡б╟╜</H2>
+W/S Versionд╟д╧бвдвдщдлд╕дс╝яб╣д╬╡б╟╜дм═╤░╒д╡дьд╞дкдъбв
+Kodatunoе│еєе╜б╝еыд╦┼╨╧┐д╡дьд┐е│е▐еєе╔дЄ╞■╬╧д╣дыд│д╚д╦дшдъбв╜ъ─ъд╬╡б╟╜дЄ╝┬╣╘д╣дыд│д╚дмд╟днд▐д╣бг
 ┼╨╧┐д╡дьд╞дддые│е▐еєе╔дЄ░╩▓╝д╦╝ид╖д▐д╣бг<BR><BR>
 <UL>
 <LI>verinf -f<BR><BR>
@@ -42,7 +42,7 @@ IGES/STLекб╝е╫еєе└едевеэе░дЄ╔╜╝ид╖д▐д╣бг<BR>
 
 <LI>wire<BR><BR>
 ┴к┬Єд╡дьд┐BodyдЄеяедефб╝е╒еьб╝ерд╟╔╜╝ид╖д▐д╣бг<BR>
-░·┐Їбзд╩д╖бг<BR><BR>
+░·┐Їбзд╩д╖<BR><BR>
 
 <LI>scale -r (Value)<BR><BR>
 ╕╜║▀д╬е░еще╒еге├епд╬╔┴▓ше╣е▒б╝еыдЄ╜╨╬╧д╖д▐д╣бг<BR>
@@ -52,6 +52,18 @@ IGES/STLекб╝е╫еєе└едевеэе░дЄ╔╜╝ид╖д▐д╣бг<BR>
 ╕╜║▀д╬╔┴▓шд╬└║┼┘(е╚еьещеєе╣)дЄ╜╨╬╧д╖д▐д╣бг<BR>
 ░·┐ЇrдЄ╗╪─ъд╣дыд╚бвValueд╟╗╪─ъд╖д┐├═д╬е╚еьещеєе╣д╦╩╤╣╣д╖д▐д╣бг╗╪─ъд╟дндые╚еьещеєе╣├═д╧1░╩╛хд╟бв
 ├═дм╛од╡дд╩¤дм╣т└║┼┘д╩╔┴▓шд╚д╩дъд▐д╣бге╟е╒ейеые╚├═д╧20д╟д╣бг<BR><BR>
+
+<LI>cpview<BR><BR>
+е│еєе╚еэб╝еые▌едеєе╚дЄ╔┴▓шд╖д▐д╣бг<BR>
+░·┐Їбзд╩д╖<BR><BR>
+
+<LI>surfinfo<BR><BR>
+╢╩╠╠╛Ё╩єдЄе│еєе╜б╝еыд╦╜╨╬╧д╖д▐д╣бг
+░·┐Їбзд╩д╖<BR><BR>
+
+<LI>exp -r (Value)<BR><BR>
+░·┐ЇrдЄ╗╪─ъд╣дыд╚бвValueд╟╗╪─ъд╖д┐╟▄╬ид╟BODYдЄ│╚┬чбж╜╠╛од╖д▐д╣бг<BR><BR>
+
 
 <LI>rots<BR><BR>
 ▓є┼╛е╡б╝е╒езе╣дЄ└╕└од╖д▐д╣бг
@@ -105,8 +117,14 @@ Inputе╒ебедеыдЄ┴к┬Єд╖бв"OK"е▄е┐еєдЄ▓бд╣д╚бв1д─д╬NURBS╢╩╠╠дм└╕└од╡дьд▐д╣бгд▐д┐д╬д
 б╬NURBS╢╩└■└╕└од╬▓с─°б╧
 </CENTER></P>
 
+<BR><BR>
+виN/G Versionд╟д╧бвд│дьдщд╬е│е▐еєе╔д╧═╤░╒д╡дьд╞ддд▐д╗дєдмбв<A HREF="1-2.html">1.2  │м┴╪╣╜┬д </A>д╟╝ид╖д┐дшджд╦бв
+Kodatunoд╟д╧GUI╔Їд╚GE╔Їдм╞╚╬йд╖д╞дддыд┐дсбв╛х╡нд╬┴р║юд╬╞тбвNURBS╢╩╠╠/╢╩└■д╬└╕└од╦┤╪д╖д╞д╧
+GE╔Їдм═╤░╒д╣ды┤╪┐Їд╚д╖д╞═╤░╒д╡дьд╞ддд▐д╣бг
 
-</blockquote> <HR> Document Release 1.0 for Kodatuno R1.1, Mar. 2011<P> <hr> <center>
+
+
+</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
 <A HREF="./2-3.html">Prev</A>
 <A HREF="./index.html">index</A>
 <A HREF="./2-5.html">Next</A><br>
@@ -116,7 +134,7 @@ Inputе╒ебедеыдЄ┴к┬Єд╖бв"OK"е▄е┐еєдЄ▓бд╣д╚бв1д─д╬NURBS╢╩╠╠дм└╕└од╡дьд▐д╣бгд▐д┐д╬д
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Mar. 3, 2011</i></small>      
+		<small><i>Last modified: Nov. 11, 2011</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
