--- a/3-1.html
+++ b/3-1.html
@@ -55,10 +55,12 @@
 <LI>Quaternion.h
 </LI></UL>
 
-＜BODY描画＞
+＜BODY描画/操作＞
 <UL>
 <LI>Describe_BODY.cpp
 <LI>Describe_BODY.h
+<LI>BODY_Handler.cpp
+<LI>BODY_Handler.h
 </LI></UL>
 
 ＜システム操作＞
@@ -66,8 +68,13 @@
 <LI>Kodatuno_Main.cpp
 <LI>Kodatuno.h
 <LI>Kodatuno_CMD.cpp
+<LI>KodListFunc.cpp
+<LI>KodListFunc.h
 <LI>Command.cpp
 <LI>Command.h
+<LI>StdAfxWS_.cpp
+<LI>StdAfxWS_.h
+<LI>
 </LI></UL>
 
 ＜パーサー＞
@@ -116,7 +123,7 @@ GE/GUIモジュールをUserが利用するためのブリッジとして以下のライブラリを提供してい
 <BR><BR>
 ※なお、本Refereceでは、Wide Stduio固有のソースファイルである、Kodatuno_Win.h及びGeneralFile_Dlg.hに関する説明は省略します。
 
-</blockquote> <HR> Document Release 1.0 for Kodatuno R1.0, Mar. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
 			<A HREF="./2-8.html">Prev</A>     
 			<A HREF="./index.html">Index</A>          
 			<A HREF="./3-2.html">Next</A><br>     
@@ -126,7 +133,7 @@ GE/GUIモジュールをUserが利用するためのブリッジとして以下のライブラリを提供してい
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Mar. 3, 2011</i></small>      
+		<small><i>Last modified: Nov. 11, 2011</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
