--- a/3-3-1.html
+++ b/3-3-1.html
@@ -6,18 +6,38 @@
 <H2>Describe_BODY</H2>
     <A target="func" HREF="3-3-2.html#Describe_BODY()"> Describe_BODY()</A><BR>
     <A target="func" HREF="3-3-2.html#Describe_BODY~()"> Describe_BODY()</A><BR>
+    <A target="func" HREF="3-3-2.html#DrawBody()"> DrawBody()</A><BR>
     <A target="func" HREF="3-3-2.html#DrawCompositeCurve()"> DrawCompositeCurve()</A><BR>
     <A target="func" HREF="3-3-2.html#DrawLine()"> DrawLine()</A><BR>
     <A target="func" HREF="3-3-2.html#DrawNurbsCurve()"> DrawNurbsCurve()</A><BR>
     <A target="func" HREF="3-3-2.html#DrawTrimdNurbsSurfe()"> DrawTrimdNurbsSurfe()</A><BR>
     <A target="func" HREF="3-3-2.html#DrawNurbsSurfe()"> DrawNurbsSurfe()</A><BR>
+    <A target="func" HREF="3-3-2.html#DrawCurveOnParamSurfe()"> DrawCurveOnParamSurfe()</A><BR>
     <A target="func" HREF="3-3-2.html#DrawTrimdSurf()"> DrawTrimdSurf()</A><BR>
     <A target="func" HREF="3-3-2.html#DrawNurbsCurve_Param()"> DrawNurbsCurve_Param()</A><BR>
-    <A target="func" HREF="3-3-2.html#CheckDegenracy()"> CheckDegenracy()</A><BR>
+    <A target="func" HREF="3-3-2.html#Draw_NurbsCurves()"> Draw_NurbsCurves()</A><BR>
+    <A target="func" HREF="3-3-2.html#Draw_NurbsSurfaces()"> Draw_NurbsSurfaces()</A><BR>
+    <A target="func" HREF="3-3-2.html#Draw_TrimSurfes()"> Draw_TrimSurfes()</A><BR>
     <A target="func" HREF="3-3-2.html#SetNurbsStat()"> SetNurbsStat()</A><BR>
     <A target="func" HREF="3-3-2.html#SetNurbsSTolerance()"> SetNurbsSTolerance()</A><BR>
     <A target="func" HREF="3-3-2.html#NURBS_Err()"> NURBS_Err()</A><BR>
     <A target="func" HREF="3-3-2.html#SetNurbsSProperty()"> SetNurbsSProperty()</A><BR>
+    
+<H2>BODY_Handler</H2>
+    <A target="func" HREF="3-3-2.html#InitCurveColor()"> InitCurveColor()</A><BR>
+    <A target="func" HREF="3-3-2.html#InitSurfaceColor()"> InitSurfaceColor()</A><BR>
+    <A target="func" HREF="3-3-2.html#ChangeStatColor()"> ChangeStatColor()</A><BR>
+    <A target="func" HREF="3-3-2.html#SearchBodyList()"> SearchBodyList()</A><BR>
+    <A target="func" HREF="3-3-2.html#Init_body()"> Init_body()</A><BR>
+    <A target="func" HREF="3-3-2.html#RegistNurbsCtoBody()"> RegistNurbsCtoBody()</A><BR>
+    <A target="func" HREF="3-3-2.html#RegistNurbsCtoBodyN()"> RegistNurbsCtoBodyN()</A><BR>
+    <A target="func" HREF="3-3-2.html#RegistNurbsStoBody()"> RegistNurbsStoBody()</A><BR>
+    <A target="func" HREF="3-3-2.html#RegistNurbsStoBodyN()"> RegistNurbsStoBodyN()</A><BR>
+    <A target="func" HREF="3-3-2.html#RotBody()"> RotBody()</A><BR>
+    <A target="func" HREF="3-3-2.html#ShiftBody()"> ShiftBody()</A><BR>
+    <A target="func" HREF="3-3-2.html#New_body()"> New_body()</A><BR>
+    <A target="func" HREF="3-3-2.html#Free_body()"> Free_body()</A><BR>
+
 </body> </html>
 
 
