--- a/3-4-1.html
+++ b/3-4-1.html
@@ -13,6 +13,7 @@
     <A target="func" HREF="3-4-2.html# SetCoord()"> SetCoord()</A><BR>
     <A target="func" HREF="3-4-2.html# DiffCoord()"> DiffCoord()</A><BR>
     <A target="func" HREF="3-4-2.html# AbsCoord()"> AbsCoord()</A><BR>
+    <A target="func" HREF="3-4-2.html# ZeroCoord()"> ZeroCoord()</A><BR>   
     <A target="func" HREF="3-4-2.html# NormalizeVec()"> NormalizeVec()</A><BR>
     <A target="func" HREF="3-4-2.html# CalcEuclid()"> CalcEuclid()</A><BR>
     <A target="func" HREF="3-4-2.html# CalcEuclid2D()"> CalcEuclid2D()</A><BR>
