--- a/3-5-1.html
+++ b/3-5-1.html
@@ -5,7 +5,11 @@
 
 <H2>IGES_Parser</H2>
     <A target="func" HREF="3-5-2.html#IGES_Parser_Main()"> IGES_Parser_Main()</A><BR>
+    <A target="func" HREF="3-5-2.html#NormalizeKnotRange()"> NormalizeKnotRange()</A><BR>
+    <A target="func" HREF="3-5-2.html#ModifyParamConect()"> ModifyParamConect()</A><BR>
+    <A target="func" HREF="3-5-2.html#CheckDegenracy()"> CheckDegenracy()</A><BR>
     <A target="func" HREF="3-5-2.html#IGES_PARSER()"> IGES_PARSER()</A><BR>
+    
     <A target="func" HREF="3-5-2.html#GetSectionLine()"> GetSectionLine()</A><BR>
     <A target="func" HREF="3-5-2.html#GetStartSection()"> GetStartSection()</A><BR>
     <A target="func" HREF="3-5-2.html#GetGlobalSection()"> GetGlobalSection()</A><BR>
