--- a/3-9-2.html
+++ b/3-9-2.html
@@ -787,6 +787,11 @@ void CmdGenSweepSurf(int,char *[]);        コマンド(スイープサーフェス生成)
 void CmdGenNurbsCurve(int,char *[]);       コマンド(Nurbs曲線生成)
 void CmdGenNurbsSurface(int,char *[]);     コマンド(Nurbs曲面生成)
 void CmdChTolerance(int,char *[]);         コマンド(トレランス変更)
+void CmdMoveBody(int,char *[]);            コマンド(BODYの平行移動)
+void CmdRotateBody(int ,char *[]);         コマンド(BODYの回転)
+void CmdCPView(int ,char *[]);             コマンド(コントロールポイント描画)
+void CmdSurfInfo(int,char *[]);            コマンド(曲面情報を出力)
+void CmdExpand(int,char *[]);              コマンド(BODYの拡大)
 ＜説明＞
     各種コマンド処理
 ＜引数＞  
@@ -868,7 +873,7 @@ typedef struct{
 </font></pre>
 
 
-</blockquote> <HR> Document Release 1.0 for Kodatuno R1.0, Mar. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
 <A HREF="./3-8.html" TARGET="_top">Prev</A>     
 <A HREF="./index.html" TARGET="_top">Index</A>          
 <A HREF="./references.html" TARGET="_top">Next</A><br>     
@@ -878,7 +883,7 @@ typedef struct{
 <small>Copyright(C) Kodatuno Development Team, 2011</small>      
 </td>      
 <td align="right">        
-<small><i>Last modified: Mar. 3, 2011</i></small>      
+		<small><i>Last modified: Nov. 11, 2011</i></small>      
 </td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
