--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 <LI><A HREF="2-1.html">2.1  環境構築 </A></LI>
 <LI><A HREF="2-2.html">2.2  Kodatunoを動かしてみよう </A></LI>
 <LI><A HREF="2-3.html">2.3  各ウィンドウの名称と機能 </A></LI>
-<LI><A HREF="2-4.html">2.4  各コマンドの名称と機能 </A></LI>
-<LI><A HREF="2-5.html">2.5  サンプルアプリケーションの実行 </A></LI>
-<LI><A HREF="2-6.html">2.6  サンプルアプリケーションのソース解説 </A></LI>
-<LI><A HREF="2-7.html">2.7  簡単なアプリケーションの作成 </A></LI>
-<LI><A HREF="2-8.html">2.8  その他 </A></LI>
+<LI><A HREF="2-4.html">2.4  W/S Versionが持つ機能 </A></LI>
+<LI><A HREF="2-5.html">2.5  サンプルアプリケーションの実行 (W/S Version) </A></LI>
+<LI><A HREF="2-6.html">2.6  サンプルアプリケーションのソース解説 (W/S Version) </A></LI>
+<LI><A HREF="2-7.html">2.7  簡単なアプリケーションの作成 (W/S Version) </A></LI>
+<LI><A HREF="2-8.html">2.8  その他 (W/S Version) </A></LI>
 
 </ul>
 
-<H2>第3章 関数ライブラリリファレンス</H2>
+<H2>第3章 W/S Ver. 関数ライブラリリファレンス</H2>
 <ul>
 <LI><A HREF="3-1.html">3.1  ライブラリ構成 </A></LI>
 <LI><A HREF="3-2.html">3.2  NURBS演算ライブラリ </A></LI>
-<LI><A HREF="3-3.html">3.3  描画用ライブラリ </A></LI>
+<LI><A HREF="3-3.html">3.3  BODY描画/操作ライブラリ </A></LI>
 <LI><A HREF="3-4.html">3.4  数値演算ライブラリ </A></LI>
 <LI><A HREF="3-5.html">3.5  IGESパーサ </A></LI>
 <LI><A HREF="3-6.html">3.6  STLパーサ </A></LI>
@@ -71,14 +71,14 @@
 <A HREF="references.html"><H2>参考資料</H2></A>
 
 
-</blockquote> <HR> Document Release 1.0 for Kodatuno R1.1, Mar. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
 <A HREF="./index.html">index</A></center> <hr> <table cellpadding="0" cellspacing="0" border="0" width="100%">    
 <tr>      
 	<td align="left">        
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>
 	<td align="right">        
-		<small><i>Last modified: Mar. 3, 2011</i></small>      
+		<small><i>Last modified: Nov. 11, 2011</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
