--- a/2-5.html
+++ b/2-5.html
@@ -29,7 +29,9 @@
 
 <BR><HR><H2>サンプルアプリケーションの実行</H2>
 
-Kodatunoには2つのサンプルアプリケーションが用意されています。<BR><BR>
+Kodatuno CAM Kernelを使ったCAMアプリケーションの実装手順を説明します。<BR>
+Kodatuno W/S Ver.には2つのサンプルアプリケーションが用意されています。以下で、そのサンプルアプリケーションの実行方法及び
+ソース解説を行います。<BR><BR>
 
 <BR><H3>Ex.1) 等高線算出プログラム</H3><BR>
 1つのBody(NURBS曲面)と、x-y平面に平行な平面の交線(交点群)を、z方向に少しずつシフトしながら求めてく、等高線算出プログラムです。
@@ -110,7 +112,7 @@ Kodatunoには2つのサンプルアプリケーションが用意されています。<BR><BR>
 </CENTER></P>
 </OL>
 
-</blockquote> <HR> Document Release 1.0 for Kodatuno R1.1, Mar. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
 <A HREF="./2-4.html">Prev</A>
 <A HREF="./index.html">index</A>
 <A HREF="./2-6.html">Next</A><br>
@@ -120,7 +122,7 @@ Kodatunoには2つのサンプルアプリケーションが用意されています。<BR><BR>
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Mar. 3, 2011</i></small>      
+		<small><i>Last modified: Nov. 11, 2011</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
