--- a/3-7-1.html
+++ b/3-7-1.html
@@ -3,7 +3,7 @@
 	<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=euc-jp">
 </HEAD><BODY bgcolor=#ffffff >
 
-<H2>IGES_Parser</H2>
+<H2>UserFunc</H2>
     <A target="func" HREF="3-7-2.html#USER()"> USER()</A><BR>
     <A target="func" HREF="3-7-2.html#UserFunc()"> UserFunc()</A><BR>
     <A target="func" HREF="3-7-2.html#GetMenuLabelName()"> GetMenuLabelName()</A><BR>
